# appx-util

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md
.github/workflows/: main.yml
PrivateHeaders/APPX/: APPX.h  Encode.h  File.h  Hash.h  OpenSSL.h  Sign.h  Sink.h  XML.h  ZIP.h
Sources/: APPX.cpp  File.cpp  OpenSSL.cpp  Sign.cpp  XML.cpp  ZIP.cpp  main.cpp
Tests/: TestContentTypes.py  TestEmptyFile.py  TestInputs.py  TestValidZIP.py  TestXMLEscaping.py  TestZIPEscaping.py
Tests/appx/: __init__.py  util.py
